(svn/unreleased)

From 1.7 (svn/unreleased)

- added unique column classnames for thead and tbody table section to identify 
  columns and modify it's properties through css (specially width for each 
  column seperatly). Now we can remove the style attributes and do some 
  template code cleanup.  [saily]

- allow Products.Archetypes.interfaces.IVocabulary providing objects as 
  Vocabularies. This makes SelectColumn usable in archetypes.schemaextender
  w/o having to patch the extended class.
  [jensens]

- Move installation back to GenericSetup, end of Plone 2.5.x support
  [andrewb, but real thanks goes to wichert]

1.6 (2009-1-28)

- Merging of colliding datagridwidget.css and datagridwidget.css.dtml files.
  Fixes issue #30: http://plone.org/products/datagridfield/issues/30.  Which
  file was ultimately selected appears to be inconsistent.  If you're
  depending upon an overridden version of either and notice bugs with regards
  to hidden columns and/or rows appearing or the promise of adding additional
  DGF rows when using the FixedColumn, you'd be well suited to reconcile your
  customizations with the merged files from r10445 at:
  http://dev.plone.org/archetypes/changeset/10445
  [andrewb]

From 1.6rc1

- Adding Plone 2.5.x DataGridField profile "default_25x" to overcome difference in 
  GS namespace for the registration of our skin directory.  Without this, one needed
  to manually add the correct FSDV within the portal_skins tool for .pt, .dtml, 
  images, etc. to exist with the DataGridWidget's skins directory. [andrewb] 

- Adding back Extensions and Install.py with install() function for consistent 
  Add/Remove Products experience back to Plone 2.5.x, which did not handle 
  GenericSetup profile-based installation.  The install code delegates to Generic
  Setup for maximal code reuse. The justification is that to completely remove
  a Add/Remove Product support in Plone 2.5.x between a beta 2 and beta 3 release