@@ -1,0 +1,37 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      i18n:domain="plone">
+      
+      
+<!-- View/edit link cells -->
+
+<body>
+    <!-- VIEW -->
+    <metal:view_cell_macro define-macro="view_cell">
+        <div tal:content="cell_value" />
+    </metal:view_cell_macro>
+    
+
+    <!-- EDIT -->
+    <metal:edit_cell_macro define-macro="edit_cell">
+       <textarea style="width: 100%" name="myfield.name:records" 
+                 tal:attributes="name string:${fieldName}.${column}:records;
+                                 id string:${column}_${fieldId};
+                                 onchange eventHandler;"
+                 tal:content="python:'\n'.join(cell_value)"></textarea>
+    </metal:edit_cell_macro>
+    
+   <!-- EMPTY EDIT -->
+    <metal:edit_empty_cell_macro define-macro="edit_empty_cell">
+       <textarea style="width: 100%" name="myfield.name:records" 
+                       tal:attributes="name string:${fieldName}.${column}:records;
+                                       id string:${column}_${fieldId};                                     
+                                       onchange eventHandler;"
+                       tal:content="python:column_definition.getDefault(here)"></textarea>
+    </metal:edit_empty_cell_macro>
+    
+</body>
+
+</html>
